--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-aseURL = 'https://kanda.rec/'
+baseURL = 'https://kanda.rec/'
 languageCode = 'fr-FR'
 title = 'k4ndar3c blog'
 theme = 'nightfall'
@@ -16,7 +16,7 @@ url = "https://github.com/k4ndAr3c"
 [[params.social]]
 key = 1
 name = "email"
-url = "mailto:k4ndar3c@kanda.rec"
+url = "mailto:k4ndar3c@gmx.com"
 
 [[params.social]]
 key = 2
