--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ url = "https://github.com/k4ndAr3c"
 [[params.social]]
 key = 1
 name = "email"
-url = "mailto:k4ndar3c@gmx.com"
+url = "mailto:kandarec@proton.me"
 
 [[params.social]]
 key = 2
